--- a/trunk/talkingrss/AndroidManifest.xml
+++ b/trunk/talkingrss/AndroidManifest.xml
@@ -16,9 +16,9 @@ limitations under the License.
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.google.talkativeapps.talkingrss"
-      android:versionCode="4"
-      android:versionName="1.2.1">
+      package="com.googlecode.talkingrssreader.talkingrss"
+      android:versionCode="5"
+      android:versionName="1.2.2">
     <uses-sdk android:minSdkVersion="2"></uses-sdk>
     <application android:label="@string/app_name"
             android:icon="@drawable/rss_talk">
@@ -50,14 +50,14 @@ limitations under the License.
         </activity>
 
       <service android:enabled="true" 
-          android:taskAffinity="com.google.talkativeapps.talkingrss.snappytts"
-          android:process="com.google.talkativeapps.talkingrss.snappytts"
+          android:taskAffinity="com.googlecode.talkingrssreader.talkingrss.snappytts"
+          android:process="com.googlecode.talkingrssreader.talkingrss.snappytts"
           android:name="com.google.tts.TTSService" 
           android:label="snappytts" 
           android:icon="@drawable/tts" >
         <intent-filter>
-          <action android:name="com.google.talkativeapps.talkingrss.intent.action.USE_SNAPPYTTS" />
-          <category android:name="com.google.talkativeapps.talkingrss.intent.category.SNAPPYTTS" />
+          <action android:name="com.googlecode.talkingrssreader.talkingrss.intent.action.USE_SNAPPYTTS" />
+          <category android:name="com.googlecode.talkingrssreader.talkingrss.intent.category.SNAPPYTTS" />
         </intent-filter>
       </service>
     </application>
